Implemented Roots and Additional SpawnPoints

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ sysinfo.txt
 BuggyPhysics/Assets/UnityVS/
 BuggyPhysics/Assets/UnityVS.meta
 BuggyPhysics/Resources/HighScore.txt
+BuggyPhysics/Assets/Model/kameleon_1.OBJ.meta
